@@ -413,16 +413,22 @@ the row</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>A <link
-	  linkend="class-gtktreeiter"><classname>gtk.TreeIter</classname></link>
-	  (may not be valid)</simpara></listitem>
+	  <listitem><simpara><literal>TRUE</literal> if
+<parameter>iter</parameter> is still valid.</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
       <para>The <methodname>remove</methodname>() method removes the row
-specified by <parameter>iter</parameter> from the list store.  After being
-removed, <parameter>iter</parameter> is set to be the next valid row, or is
+specified by <parameter>iter</parameter> from the list store and returns
+TRUE if <parameter>iter</parameter> is still valid.  After being removed,
+<parameter>iter</parameter> is set to be the next valid row, or is
 invalidated if it pointed to the last row.</para>
+
+      <note>
+        <para>Prior to PyGTK 2.4 this method returned a new <link
+linkend="class-gtktreeiter"><classname>gtk.TreeIter</classname></link> that
+is a copy of <parameter>iter</parameter>.</para>
+      </note>
 
     </refsect2>
 
