@@ -1,3 +1,7 @@
+2004-11-18  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkliststore.xml (remove): Document return value differences.
+
 2004-11-16  John Finlay  <finlay@moeraki.com>
 
 	* pygtk2-ref.xml Set pubdate. Bump version number to 2.5.1
